Worked on user interface.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
   <script src="/lib/test-runner.js"></script>
 
   <!-- bower:js -->
+  <script src="bower_components/GeneSlider_Bower_Package/geneSlider.js"></script>
+  <script src="bower_components/processing/processing.js"></script>
   <!-- endbower -->
 
   <!-- application code -->
