--- a/app/app.html
+++ b/app/app.html
@@ -1,4 +1,77 @@
 <div class="science-app" data-app-name="araport-geneslider">
-  <h2>Araport GeneSlider</h2>
-  <canvas id="araport-geneslider-canvas" ></canvas>
+	<h1>
+		<img src="http://bar.utoronto.ca/ntools/bbc_logo_small.gif" alt="BAR logo">
+		GeneSlider
+	</h1>
+        <!-- Load a Gene Section -->
+        <div id="araport-geneslider-loadDataBox" class="text-center">
+            <div class="col-lg-12">
+                <h2>Select an <i>Arabidopsis</i> gene to view conserved regions across species:</h2>
+                <div class="row">
+                    <!-- left col -->
+                    <div class="col-md-2"></div>
+
+                    <!-- center col -->
+                    <div class="col-md-8">
+                        <div class="row">
+
+                              <!-- Before slider -->
+                              <div class="col-sm-4">
+                                  <div class="row">
+                                        <div class="col-sm-12 text-center">
+                                            <label id="araport-geneslider-beforelabel">Before (0)</label>
+                                        </div>
+                                  </div>
+
+                                  <div class="row">
+                                        <div class="col-sm-2" style="text-align:left;">1000</div>
+                                        <div class="col-sm-8" style="padding-right:0px;">
+                                            <input type="range" class="rangesliders" id="araport-geneslider-beforeSlider" name="before" value="0" min="-1000" max="0" step="10">
+                                        </div>
+                                        <div class="col-sm-2" style="text-align:right;">0</div>
+                                  </div>                                
+                              </div>
+
+                              <!-- Locus Text box -->
+                              <div class="col-sm-4 text-center">
+                                  <label class="control-label">Locus</label>
+                                  <div class="row" style="display: flex;">
+                                      <input class="form-control ui-autocomplete-input" type="text" id="araport-geneslider-user_agi" placeholder="Enter an AGI ID here" >
+
+                                      <!-- Go button -->
+                                      <span class="btn btn-success btn-file" id="araport-geneslider-go" style="margin-left: 5px;">Go</span>
+                                  </div>
+                              </div>
+
+                              <!-- After slider -->
+                              <div class="col-sm-4">
+                                  <div class="row">
+                                        <div class="col-sm-12 text-center">
+                                            <label id="araport-geneslider-afterlabel">After (0)</label>
+                                        </div>
+                                  </div>
+                                  <div class="row">
+                                        <div class="col-sm-2" style="text-align:right;">0</div>
+                                        <div class="col-sm-8" style="padding-right:0px;">
+                                            <input type="range" class="rangesliders" id="araport-geneslider-afterSlider" name="after" value="0" min="0" max="1000" step="10">
+                                        </div>             
+                                         <div class="col-sm-2" style="text-align:left;">1000</div>
+                                  </div>
+                              </div>
+
+	                      </div>
+					</div>					
+                    <!-- right col -->
+                    <div class="col-md-2"></div>
+				</div>    
+				<div class="row">
+					<div class="col-md-8">
+						<!-- Testing only
+						<canvas id="araport-geneslider-canvas" data-processing-sources="../bower_components/GeneSlider_Bower_Package/GeneSlider.pde" ></canvas>	
+						-->
+						<canvas id="araport-geneslider-canvas"></canvas>							
+					</div>
+				</div>
+            </div>
+		</div>
 </div>
