Added two buttons.

--- a/app/app.html
+++ b/app/app.html
@@ -7,6 +7,13 @@
         <div id="araport-geneslider-loadDataBox" class="text-center">
             <div class="col-lg-12">
                 <h2>Select an <i>Arabidopsis</i> gene to view conserved regions across species:</h2>
+
+				<!-- file upload -->
+				<div>
+				<input type="button" id="araport-geneslider-about" value="About">
+                Upload file<input id="araport-geneslider-fileUpload" type="file">
+                </div>
+
                 <div class="row">
                     <!-- left col -->
                     <div class="col-md-2"></div>
@@ -66,7 +73,7 @@
 				</div>    
 				<div class="row">
 					<div class="col-md-8">
-						<!-- Testing only
+						<!--	
 						<canvas id="araport-geneslider-canvas" data-processing-sources="../bower_components/GeneSlider_Bower_Package/GeneSlider.pde" ></canvas>	
 						-->
 						<canvas id="araport-geneslider-canvas"></canvas>							
