Minor change in html file

--- a/app/app.html
+++ b/app/app.html
@@ -73,10 +73,11 @@
 				</div>    
 				<div class="row">
 					<div class="col-md-8">
-						<!--	
+						<!-- This is for Desktop version -->
 						<canvas id="araport-geneslider-canvas" data-processing-sources="../bower_components/GeneSlider_Bower_Package/GeneSlider.pde" ></canvas>	
-						-->
+						<!-- This is for Araport Live version
 						<canvas id="araport-geneslider-canvas"></canvas>							
+						-->
 					</div>
 				</div>
             </div>
