Autocomplete and bug fixes.

--- a/app/app.html
+++ b/app/app.html
@@ -1,3 +1,9 @@
+<!-- Desktop 
+<link rel="stylesheet" href="../bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
+<script src="../bower_components/jquery-ui/ui/core.js"></script>
+<script src="../bower_components/jquery-ui/ui/widget.js"></script>
+<script src="../bower_components/jquery-ui/ui/accordion.js"></script>
+-->
 <div class="science-app" data-app-name="araport-geneslider">
        <!-- ///////////////////////////////////////////////////////////////////// -->
         <!-- Load a Gene Section -->
@@ -34,7 +40,7 @@
                               <div class="col-sm-4 text-center">
                                   <label class="control-label">Locus</label>
                                   <div class="row" style="display: flex;">
-                                      <input class="form-control ui-autocomplete-input" type="text" id="araport-geneslider-user_agi" placeholder="Enter an AGI ID here" >
+                                      <input class="form-control" type="text" id="araport-geneslider-user_agi" placeholder="Enter an AGI ID here" >
 
                                       <!-- Go button -->
                                       <span class="btn btn-success btn-file" id="araport-geneslider-go" style="margin-left: 5px;">Go</span>
@@ -85,6 +91,7 @@
 						-->
   						<!-- This is for Araport Live version -->
   						<canvas id="araport-geneslider-canvas"></canvas>							
+					
   					</div>
   				</div>
 
