--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <!-- bower:js -->
   <script src="bower_components/GeneSlider_Bower_Package/geneSlider.js"></script>
   <script src="bower_components/processing/processing.js"></script>
+  <script src="bower_components/jquery-ui/jquery-ui.js"></script>
   <!-- endbower -->
 
   <!-- application code -->
