--- a/app/app.html
+++ b/app/app.html
@@ -10,7 +10,7 @@
         <div id="araport-geneslider-loadDataBox" class="text-center">
             <div class="col-lg-12">
                 <!-- Enter AGI ID box -->
-                <h2>Select an <i>Arabidopsis</i> gene to view conserved regions across species:</h2>
+                <h2 id="araport-geneslider-title">Select an <i>Arabidopsis</i> gene to view conserved regions across species:</h2>
                 <div class="row" style="margin-bottom:20px;">
                     <!-- left col -->
                     <div class="col-md-2"></div>
@@ -89,9 +89,8 @@
   						<!-- This is for Desktop version 
   						<canvas id="araport-geneslider-canvas" data-processing-sources="../bower_components/GeneSlider_Bower_Package/GeneSlider.pde"></canvas>	
 						-->
-  						<!-- This is for Araport Live version -->
+  						<!-- This is for Araport Live version --> 
   						<canvas id="araport-geneslider-canvas"></canvas>							
-					
   					</div>
   				</div>
 
