Added FIMO mapped JASPAR data.

--- a/app/app.html
+++ b/app/app.html
@@ -23,7 +23,7 @@
                               <div class="col-sm-4">
                                   <div class="row">
                                         <div class="col-sm-12 text-center">
-                                            <label id="araport-geneslider-beforelabel">Before (0)</label>
+                                            <label id="araport-geneslider-beforelabel">Upstream (0)</label>
                                         </div>
                                   </div>
 
@@ -51,7 +51,7 @@
                               <div class="col-sm-4">
                                   <div class="row">
                                         <div class="col-sm-12 text-center">
-                                            <label id="araport-geneslider-afterlabel">After (0)</label>
+                                            <label id="araport-geneslider-afterlabel">Downstream (0)</label>
                                         </div>
                                   </div>
                                   <div class="row">
