--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Araport_GeneSlider | AIP Science Apps | Test Runner</title>
+  <title>Araport Gene Slider | AIP Science Apps | Test Runner</title>
   <link rel="shortcut icon" href="https://www.araport.org/sites/all/themes/custom/araport-theme/favicon.ico">
 
   <!-- jquery -->
@@ -16,7 +16,9 @@
 
   <!-- bower:css -->
   <!-- endbower-->
-
+  <!-- araport_dep:css -->
+  <link rel="stylesheet" href="app/styles/main.css" />  
+  <!-- endaraport_dep -->
   <style type="text/css">
   body {
     padding-top: 60px;
@@ -24,7 +26,6 @@
   </style>
 
   <!-- application styles -->
-  <link rel="stylesheet" type="text/css" href="/app/styles/app.css">
 </head>
 <body>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -63,7 +64,9 @@
   </div>
 
   <div class="aip-science-app container">
-    include "/app/app.html"
+  <!-- araport_dep:html -->
+  include "/app/main.html"  
+  <!-- endaraport_dep -->
   </div>
 
   <!-- swagger-js -->
@@ -78,8 +81,10 @@
   <script src="bower_components/processing/processing.js"></script>
   <script src="bower_components/jquery-ui/jquery-ui.js"></script>
   <!-- endbower -->
+  <!-- araport_dep:js -->
+  <script src="app/scripts/main.js"></script>  
+  <!-- endaraport_dep -->
 
   <!-- application code -->
-  <script src="/app/scripts/app.js"></script>
 </body>
 </html>
