--- a/app/main.html
+++ b/app/main.html
@@ -8,29 +8,29 @@
 
 <!-- ///////////////////////////////////////////////////////////////////// -->
 		<!-- Navigation --> 
-		<nav class="navbar navbar-inverse navbar-inner" role="navigation">
-			<div class="container">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header noselect">
-					<a href="http://bar.utoronto.ca"><img src="app/images/BAR.png" class="logo"></a>
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href=".">Gene Slider</a>
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav ">
-						<li>
-							<a href="#" data-toggle="modal" data-target="#aboutModal">About</a>
-						</li>
-						<li>
-							<a href="#" data-toggle="modal" data-target="#contactModal">Contact</a>
-						</li>
-					</ul>
+		<div class="row" style="background-color: #444444";>
+			<!-- BAR logo -->
+			<div class="col-md-1">
+				<a href="http://bar.utoronto.ca"><img src="app/images/BAR.png" class="logo"></a>
+			</div>
+			<div class="col-md-2">
+				<b>
+					<a style="display: inline-flex; margin:12px;" href=".">Gene Slider</a>
+				</b>
+			</div>
+
+			<!-- About -->
+			<div class="col-md-1">
+				<a href="#" data-toggle="modal" data-target="#aboutModal" style="display: inline-flex; margin:12px;">About</a>
+			</div>
+			<!-- Contact -->
+			<div class="col-md-1">
+				<a href="#" data-toggle="modal" data-target="#contactModal" style="display: inline-flex; margin:12px;">Contact</a>
+			</div>
+			<div class="col-md-5"></div>
+			<!-- Upload button -->
+			<div class="col-md-2">
+
 					<!-- Load FASTA File button -->
 					<div class="input-group" id="fileUploadButton" style="display: inline-flex; margin:7px; float:right;">
 						<span class="input-group-btn" style="min-width:85px;">
@@ -50,11 +50,9 @@
 						</span>
 						<input type="text" id="gffNameWindow" class="form-control" style="width:200px;" placeholder="Upload a GFF file" readonly>
 					</div>
-				</div>
-				<!-- /.navbar-collapse -->
 			</div>
-			<!-- /.container -->
-		</nav> 
+
+		</div>
 		<!-- ///////////////////////////////////////////////////////////////////// -->
 		<!-- Main Window -->
 		<div class="mainWindow">
