Ready to go live.

--- a/app/main.html
+++ b/app/main.html
@@ -15,17 +15,17 @@
 			</div>
 			<div class="col-md-2">
 				<b>
-					<a style="display: inline-flex; margin:12px;" href=".">Gene Slider</a>
+					<a style="display: inline-flex; margin:12px; color: #9d9d9d;" href=".">Gene Slider</a>
 				</b>
 			</div>
 
 			<!-- About -->
 			<div class="col-md-1">
-				<a href="#" data-toggle="modal" data-target="#aboutModal" style="display: inline-flex; margin:12px;">About</a>
+				<a href="#" data-toggle="modal" data-target="#aboutModal" style="display: inline-flex; margin:12px; color: #9d9d9d;">About</a>
 			</div>
 			<!-- Contact -->
 			<div class="col-md-1">
-				<a href="#" data-toggle="modal" data-target="#contactModal" style="display: inline-flex; margin:12px;">Contact</a>
+				<a href="#" data-toggle="modal" data-target="#contactModal" style="display: inline-flex; margin:12px; color: #9d9d9d;">Contact</a>
 			</div>
 			<div class="col-md-5"></div>
 			<!-- Upload button -->
